--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -25,9 +25,10 @@ body {
   transform: translateZ(0);
 }
 .unity-mobile #unity-canvas {
-  background: #161623;
-  border-radius: 15px;
-  box-shadow: 0 0 30px rgba(0, 163, 255, 0.2);
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+  box-shadow: none;
   overflow: hidden;
   transform: translateZ(0);
 }
@@ -68,6 +69,9 @@ body {
   line-height: 38px;
   font-family: arial;
   font-size: 18px;
+}
+#unity-fullscreen-button:hover {
+  transform: scaleX(1.1) scaleY(1.1) scaleZ(1);
 }
 #unity-fullscreen-button {
   position: absolute;
