--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -40,8 +40,8 @@ body {
   display: none;
 }
 #unity-logo {
-  width: 155px;
-  height: 137px;
+  width: 154px;
+  height: 130px;
   background: url('logo.png') no-repeat center;
   filter: drop-shadow(0 0 60px rgba(0, 163, 255, 1));
 }
@@ -49,13 +49,13 @@ body {
   width: 141px;
   height: 18px;
   margin-top: 10px;
-  background: url('progress-bar-empty-dark.png') no-repeat center;
+  background: url('progress-bar-empty-light.png') no-repeat center;
 }
 #unity-progress-bar-full {
   width: 0%;
   height: 18px;
   margin-top: 10px;
-  background: url('progress-bar-full-dark.png') no-repeat center;
+  background: url('progress-bar-full-light.png') no-repeat center;
 }
 #unity-footer {
   position: relative;
